# cantometria

./: Cargo.toml  README.md  flake.nix
cantometria_lib/: Cargo.toml
cantometria_lib/src/: align.rs  error.rs  grade.rs  lib.rs  run.rs  visualise.rs
cantometria_lib/src/core/: mod.rs  model.rs
cantometria_lib/src/core/melody/: input.rs  mod.rs  target.rs
cantometria_tui/: Cargo.toml
cantometria_tui/src/: app.rs  main.rs  ui.rs
midi/: bite-2.mid  bite.mid  test.mid  tetris.mid
presentation/: presentation.odp
recording/: bite-src.opus  test-src.m4a  tetris-2-src.m4a  tetris-src.m4a
report/: Kritchanat THANAPIPHATSIRI - Project Report_6610501955_Kritchanat Thanapiphatsiri.docx
src/: align.rs  error.rs  grade.rs  interpolate.rs  main.rs  pad.rs  run.rs  visualise.rs
src/core/: mod.rs  model.rs
src/core/melody/: input.rs  target.rs
